Fix form on mobile

--- a/timo_frontend/app/styles/app.scss
+++ b/timo_frontend/app/styles/app.scss
@@ -281,7 +281,8 @@ button {
 
   @include mobile {
     flex-direction: column;
-    display: flex
+    display: flex;
+    height: 100%;
   }
 }
 
